--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Cache==0.13.1
 gast==0.3.2
 google-pasta==0.1.8
 grpcio==1.25.0
@@ -28,4 +29,36 @@ termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019060501
 urllib3==1.25.7
 Werkzeug==0.16.0
+wrapt==1.11.2
+absl-py==0.8.1
+astor==0.8.0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+Flask-Cache==0.13.1
+gast==0.3.2
+google-pasta==0.1.8
+grpcio==1.25.0
+gunicorn==20.0.0
+h5py==2.10.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
+numpy==1.17.4
+Pillow==6.2.1
+protobuf==3.10.0
+requests==2.22.0
+six==1.13.0
+tb-nightly==1.14.0a20190603
+tensorflow==2.0.0b1
+termcolor==1.1.0
+tf-estimator-nightly==1.14.0.dev2019060501
+urllib3==1.25.7
+Werkzeug==0.16.0
+wincertstore==0.2
 wrapt==1.11.2
